--- a/css/sheet.css
+++ b/css/sheet.css
@@ -12,34 +12,36 @@ box-sizing:inherit;
 
 
 body {
-	background-image: url("arrows.png"); 
-	background-size:cover;
-	color:brown;
+padding-top: 50px;
+	background-color:#080808  ;
+	color:white;
 	font-family: Papyrus, fantasy;
-	margin:0;	
+	margin:0;
 }
 
 header{
-	
-	background:#D05050;
-	height:143px;
+	padding-top:20px;
+	padding-bottom:20px;
+	background:#202020;
 	margin:0;
-
 	
+
 }
 .schools{
 	display:inline-block;
-	background:#ffd6c6;
-	width:689px;
-	float
-	margin:0;
-	border:dashed 1px;
+	background:black;
+	width:960px;
+	margin:0 auto;
 	padding-bottom: 30px;
-	height:455px;
+	height:800px;
+	text-align:center;
 	}
-.schools h2{
-	font-size: 40px
-	}
+h2{
+color:#00ccff;
+font-size: 40px;
+margin-left: 38px;
+text-align:center;
+}
 
 .schools p{
 	
@@ -54,10 +56,13 @@ header{
 	
 
 }
+.content p{
+	text-align:center;
+}
 
 .content1{
 	width:400px;
-margin-left: 20px;
+	margin-left: 20px;
 	display:inline-block;
 	
 
@@ -66,8 +71,7 @@ margin-left: 20px;
 	width:500px;
 
 	display:inline-block;
-	float:top;
-	bottom:50px;
+	
 	vertical-align:top;
 	
 
@@ -75,41 +79,44 @@ margin-left: 20px;
 
 .coursework{
 	display:inline-block;
-	background:#ffd6c6;
+	background:black;
+	width:960px;
+	
+	margin:0;
+	}
+
+.projects{
+	display:inline-block;
+	background: black;
 	width:960px;
 	float
 	margin:0;
-	border:dashed 1px;
-	}
-
-	.projects{
-	display:inline-block;
-	background:#ffd6c6;
-	width:689px;
-	float
-	margin:0;
-	border:dashed 1px;
 	padding-bottom: 30px;
-	height:2800px;
+	height:3000px;
 	}
-#c{
-	font-size: 40px;
-	margin-left: 38px;
 
-	}
+
 #maze{
+	display: block;
+    margin: 0 auto;
 	width: 500px;
 	height:300px;
 }
 #textedit{
+	display: block;
+    margin: 0 auto;
 	width:500px;
 	height:300px;
 }
 #othellomenu{
+	display: block;
+    margin: 0 auto;
 	width:250px;
 	height:300px;
 }
 #othello{
+	display: block;
+    margin: 0 auto;
 	width:300px;
 	height:300px;
 }
@@ -122,10 +129,17 @@ margin-left: 20px;
 	height:220px;
 }
 #catmario{
+	display: block;
+    margin: 0 auto;
 	width:450px;
 	height:300px;
 }
-.projects a{
+.projects h3{
+	color:#00ccff;
+	text-align:center;
+}
+.content a{
+	text-align:center;
 	color: red;
 }
 #gradecalc{
@@ -151,43 +165,22 @@ header h1{
 	margin: 0 auto;
 }*/
 
-.buttonlist{
-	
-	background:#ffc9b3;
-	display:inline-block;
-	float:right;
-	height:455px;
-	width: 271px;
-	border:dashed 1px;
-	padding: 10px;
-	
 
-
+header div{
+	text-align: center;
 }
 
-.buttonlist a {
-	height:50px;
-	width:220px;
-	color:#800000;
-	
-	border-radius:10px;
-	 margin: 0, auto;
-    text-align: center;
-    font-size:20px;
-  
-    text-decoration: none;
-    display:block;
+header div a{
+	 text-decoration: none;
+	 color:white;
 }
-.buttonlist a:hover{
-	
-	
-	color:white;
+header div a:hover{
+	color:#00ccff;
 	text-decoration: underline wavy;
-}
 
+}
 
 a{
-	color: white;
 	padding:5px;
 	display:inline;
 	
@@ -196,6 +189,7 @@ a{
 }
 
 a:hover{
-	color:black;
+	color:white;
 	text-decoration:none;
 }
+
