--- a/css/style.css
+++ b/css/style.css
@@ -10,142 +10,115 @@ box-sizing:border-box;
 box-sizing:inherit;
 }
 
-
-
 body {
-	
-	background-image: url("arrows.png"); 
-	background-size:cover;
-	color:brown;
+	padding-top: 50px;
+	background-color:#080808  ;
+	color:white;
 	font-family: Papyrus, fantasy;
 	margin:0;
 	
 }
-
-#profile{ 
-	padding:5px;
-	height:190px;
-	width:190px;
-	border-radius:50%;
-	border: dashed brown ;
-
-	
-}
-#profile:hover{ 
-	-webkit-filter: brightness(70%);
-   filter: brightness(70%);
-
-	
-}
-
 header{
-	
-	background:#ffb69c;
-	height:150px;
+	padding-top:20px;
+	padding-bottom:20px;
+	background:#202020;
 	margin:0;
 	
 
 }
 #header2{
-	background:#D05050;
+	background:black;
 	height:60px;
-	
-	
 }
-header h1 {
-	position:relative;
-	bottom:90px;
-	left:50px;
-	color:#800000;
-	font-size: 90px;
-	display: inline-block;
-	font-family: Papyrus, fantasy;
-	margin:0 auto;
 
-
-
-}
 footer{
-	background:#A61919;
+	background:black;
 	color:white;
-	text-align: center;
-	padding-top: 3px;
-	height:120px;
+	height:85px;
+}
+footer div{
+	padding-left:45px;
+	top:10px;
+
+}
+footer div a{
+	padding:10px;
+	align:center;
+	margin:0;
+	font-size:0;
+	float:left;
+	left:30px;
+	
 }
 
 
-#header2 h1 {
-	position:relative;
-	padding-top: 10px;
-	color:#800000;
-	left:220px;
-	bottom:0px;
-	font-size:23px;
-	color:white;
-	margin: 0 auto;	
-
-}
 
 .about{
 	display:inline-block;
-	background:#ffd6c6;
-	
-	width:689px;
-	float
-	margin:0;
-	border:dashed 1px;
+	background:black;
+	padding-left:40px;
+	width:960px;
+
 
 }
-.about h2{
-	font-size:40px;
+.about img{
+	display:inline-block;
 
+	height:250px;
+	width:250px;
+	border-radius:50%;
+	border: solid #00ccff ;
+	
+
+}
+
+.about img:hover{
+	-webkit-filter: brightness(70%);
+   filter: brightness(70%);
+
+}
+.about h2{	
+	font-size:50px;
+	padding-top:10px;
+	padding-left:40px;
+	margin:0px
+}
+.about h5{
+	padding-left:50px;
+	font-family: Brush Script Std, Brush Script MT, cursive;
+	font-size:30px;
+	color:#00ccff;
+	margin:0px
 }
 .about p{
 	font-size:20px;
+	padding-top:10px;
+	padding-left:40px;
+	margin:0px
 	
 }
 .content{
+	display:inline-block;
 	width:600px;
 	margin: 0 auto;
-
-}
-.buttonlist{
-	
-	background:#ffc9b3;
-	display:inline-block;
-	float:right;
-	height:337px;
-	width: 271px;
-	border:dashed 1px;
-	padding: 10px;
-	
-
-
 }
 
-.buttonlist a {
-	height:50px;
-	width:220px;
-	color:#800000;
-	
-	border-radius:10px;
-	 margin: 0, auto;
-    text-align: center;
-    font-size:20px;
-  
-    text-decoration: none;
-    display:block;
+header div{
+	text-align: center;
 }
-.buttonlist a:hover{
-	
-	
-	color:white;
+
+header div a{
+	 text-decoration: none;
+	 color:white;
+}
+header div a:hover{
+	color:#00ccff;
 	text-decoration: underline wavy;
-}
 
+}
 
 a{
-	color: white;
+	
 	padding:5px;
 	display:inline;
 	
