--- a/css/sheet.css
+++ b/css/sheet.css
@@ -12,7 +12,7 @@ box-sizing:inherit;
 
 
 body {
-padding-top: 50px;
+
 	background-color:#080808  ;
 	color:white;
 	font-family: Papyrus, fantasy;
@@ -26,6 +26,14 @@ header{
 	margin:0;
 	
 
+}
+.experience{
+	padding-top:20px;
+	margin:0 auto;
+	display:block;
+	padding-left:100px;
+	background-color:black;
+	padding-bottom:20px;
 }
 .schools{
 	display:inline-block;
@@ -89,12 +97,17 @@ text-align:center;
 	display:inline-block;
 	background: black;
 	width:960px;
-	float
+	
 	margin:0;
 	padding-bottom: 30px;
-	height:3000px;
+	height:3300px;
 	}
 
+
+.projectimg{
+	display: block;
+    margin: 0 auto;
+}
 
 #maze{
 	display: block;
@@ -120,35 +133,51 @@ text-align:center;
 	width:300px;
 	height:300px;
 }
+
+
 #spendtrack{
-	width:290px;
-	height:220px;
+	width:500px;
+	height:300px;
+	content:url('spendtrack.jpg');
+}
+#spendtrack:hover{
+	width:500px;
+	height:300px;
+	content:url('overspendtrack.jpg');
 }
 #overspendtrack{
 	width:290x;
 	height:220px;
 }
 #catmario{
-	display: block;
-    margin: 0 auto;
 	width:450px;
 	height:300px;
+	content:url('catmario1.png');
+	
+}
+#catmario:hover{
+	width:450px;
+	height:300px;
+	content:url('catmario.jpg');
 }
 .projects h3{
 	color:#00ccff;
 	text-align:center;
 }
 .content a{
+	display:block;
 	text-align:center;
 	color: red;
 }
 #gradecalc{
-	width:295px;
-	height:150px;
+	width:500px;
+	height:300px;
+	content:url('gradetitle.png');
 }
-#gradecalcgroup{
-	width:295px;
-	height:150px;
+#gradecalc:hover{
+	width:500px;
+	height:300px;
+	content:url('graderesult.png');
 }
 header h1{
 	position:relative;
