slideshow imgs updated. added login html

--- a/biorobotics/css/main.css
+++ b/biorobotics/css/main.css
@@ -70,7 +70,8 @@ header .selected{
 	font-size:15px
 }
 .dropdown-content a:hover{
-	background-color:#F0F0F0
+	background-color:#778899;
+	
 }
 
 .dropdown:hover .dropdown-content {
