--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #wrapper{
 	margin-left:auto;
 	margin-right:auto;
-	width:960px;
+	width:1000px;
 }
 html{
 box-sizing:border-box;
@@ -10,123 +10,144 @@ box-sizing:border-box;
 box-sizing:inherit;
 }
 
-body {
-	padding-top: 50px;
-	background-color:#080808  ;
-	color:white;
-	font-family: Papyrus, fantasy;
-	margin:0;
-	
-}
-header{
-	padding-top:20px;
-	padding-bottom:20px;
-	background:#202020;
-	margin:0;
-	
-
-}
-#header2{
-	background:black;
-	height:60px;
-}
-
-footer{
-	background:black;
-	color:white;
-	height:85px;
-}
-footer div{
-	padding-left:45px;
-	top:10px;
-
-}
-footer div a{
-	padding:10px;
-	align:center;
-	margin:0;
-	font-size:0;
-	float:left;
-	left:30px;
-	
-}
-
-
-
 .about{
-	display:inline-block;
-	background:black;
-	padding-left:40px;
-	width:960px;
-
-
-}
-.about img{
-	display:inline-block;
-
-	height:250px;
-	width:250px;
-	border-radius:50%;
-	border: solid #00ccff ;
+	background-color:#E8E8E8;
+	margin:0;
 	
-
+	box-shadow: 10px 10px 5px #888;
+	
 }
-
-.about img:hover{
-	-webkit-filter: brightness(70%);
-   filter: brightness(70%);
-
-}
-.about h2{	
-	font-size:50px;
-	padding-top:10px;
-	padding-left:40px;
-	margin:0px
+.about h2{
+	display:inline-block;
+	float:right;
+	padding-right:120px;
+	padding-top:60px;
+	color:	#383838;
+	font-size:60px;
+	font-family:Garamond;
+	margin:0;
 }
 .about h5{
-	padding-left:50px;
-	font-family: Brush Script Std, Brush Script MT, cursive;
-	font-size:30px;
-	color:#00ccff;
-	margin:0px
-}
-.about p{
-	font-size:20px;
-	padding-top:10px;
-	padding-left:40px;
-	margin:0px
-	
-}
-.content{
 	display:inline-block;
-	width:600px;
-	margin: 0 auto;
+	float:right;
+	padding-right:160px;
+	color:	#4e89a4;
+	font-size:20px;
+	font-family:Papyrus;
+	margin:0
+}
+body {
+	padding-top: 50px;
+
+	color:white;
+	background-image: url("background.jpg");
+	
+	margin:0;
+		
 }
 
+/*header*/
+header{
+	
+	padding-top:30px;
+	padding-bottom:20px;
+	background:#505050;
+	padding-right:25px;
+	margin: 8px;
+	-webkit-box-shadow: 6px 6px 7px 0px rgba(0,0,0,0.73);
+	-moz-box-shadow: 6px 6px 7px 0px rgba(0,0,0,0.73);
+	box-shadow: 6px 6px 7px 0px rgba(0,0,0,0.73);
+}
 header div{
-	text-align: center;
-}
+	text-align: right;
+	
 
+}
 header div a{
+	font-family:Garamond;
 	 text-decoration: none;
 	 color:white;
+	 padding-left:10px
 }
-header div a:hover{
-	color:#00ccff;
-	text-decoration: underline wavy;
-
-}
-
-a{
-	
+header a{
 	padding:5px;
 	display:inline;
-	
 	margin:10px;
-	font-size:15px;
+	font-size:15px;	
+}
+header a:hover{
+	color:#4e89a4
+}
+.selected{
+	color:#4e89a4
 }
 
-a:hover{
-	color:black;
-	text-decoration:none;
+#photo{
+	
+	padding-left:30px;
+	padding-right:30px;
+	padding-bottom:50px;
+	display:inline-block;
+}
+#profileimg{
+	width:360px;
+	height:400px;
+	border: 1px solid #ddd;
+    border: 5px solid 	#989898;
+  	padding: 10px;  
+}
+#photo:hover{
+	animation: photo 0.3s linear 1;
+}
+@keyframes photo{
+  50%  {transform: scale(1.2);}
+}
+
+
+.content{
+
+	display:inline-block;
+	width:500px;
+	float:right;
+	margin-right:65px;
+	color:grey;
+	font-size:20px
+}
+#icons{
+	padding-right:20px;
+	position:relative;
+	left:485px;
+	bottom:150px
+}
+#icons a{
+	padding-right:50px
+}
+#icons img:hover{
+	opacity:0.5;
+}
+header #cursive{
+	float:left;
+	bottom:45px;
+	left:30px;
+	position:relative;
+	font:  45px 'Pacifico', Helvetica, sans-serif;
+	color: #4e89a4;
+	text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
+}
+
+/*education/experience tab*/
+
+.edheaders{
+	margin:0;
+	padding-top:50px;
+	text-align:center;
+	font-size:35px;
+	color:#505050;
+}
+.schcontent p{
+	 padding: 0;
+    margin: 0;
+}
+.schcontent{
+	padding-left:50px;
 }
