--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ box-sizing:border-box;
 }
 *,*:before, *:after{
 box-sizing:inherit;
+
 }
 
 @font-face{
@@ -155,4 +156,50 @@ header #cursive{
 }
 .schcontent{
 	padding-left:50px;
+}
+
+/* projects tab */
+
+
+#descrip{
+	font-size:40px;
+	text-align:center;
+	opacity:0;
+	position:relative;
+	left:360px;
+	bottom:200px;
+	color:white;
+	height:30px;
+	width:290px;
+}
+#overlay img, #descrip{
+	 -webkit-transition: opacity 0.5s ease-out;
+      -moz-transition: opacity 0.5s ease-out;
+      -o-transition: opacity 0.5s ease-out;
+      transition: opacity 0.5s ease-out;
+}
+
+#mainimg:hover + #descrip{
+	opacity:1;
+}
+#mainimg{
+	opacity:1;
+	
+}
+#mainimg:hover{
+	 -webkit-filter: brightness(20%);
+	
+}
+#mainimg:hover+#descrip{
+	display:block;
+}
+
+#projectdescrip{
+	padding-left:50px;
+	padding-right:50px;
+	padding-bottom:50px;
+	color:#505050;
+}
+#projectdescrip h4{
+	font-size:20px;
 }
