--- a/css/general.css
+++ b/css/general.css
@@ -66,10 +66,12 @@ header p{
 
 #picture{
     display:inline-block;
-    width:80%;
-    padding-right:50px;
-    padding-left:20px;
-    padding-top:20px
+	width:80%;
+	
+    margin-right:50px;
+    margin-left:20px;
+	margin-top:20px;
+	border-radius:50%;
   
 }
 #description{
