--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ span{
     width: 100%;
     height: 80vw;
     position: relative;
+    overflow-x: hidden 
 }
 
 #title_section img{
@@ -57,7 +58,8 @@ span{
 #about_me img{
     width: 100%;
     height: auto;   
-    object-fit: fill
+    object-fit: fill;
+    overflow-x: hidden 
 
 }
 
@@ -98,7 +100,8 @@ span{
 #experience{
   
     background-color: 	#FFDFD8;
-    padding-bottom: 10vw
+    padding-bottom: 10vw;
+    overflow-x: hidden 
 }
 
 
@@ -147,6 +150,7 @@ span{
 
 #skills{
     background-color:#F0F0F0;
+    overflow-x: hidden 
   
  
 }
@@ -166,7 +170,8 @@ span{
 
     background-color:#474747;
     color:white;
-    padding-bottom:5vw
+    padding-bottom:5vw;
+    overflow-x: hidden 
 }
 
 #contact h2{
